--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/">
     <title>Matersant</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/images/logo-matersant.png">
 
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.2/css/line.css">
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -19,7 +19,7 @@
     <link href="./assets/css/flatpickr.min.css" rel="stylesheet" type="text/css" />
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="assets//images/favicon.ico">
+    <link rel="shortcut icon" href="assets/images/logo-matersant.png">
 
 </head>
 
