--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/">
-    <title>Matersant</title>
+    <title>Casa Matersant</title>
     <link rel="icon" type="image/x-icon" href="assets/images/logo-matersant.png">
 
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.2/css/line.css">
