--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <head>
     <meta http-equiv="Expires" content="0">
     <meta http-equiv="Last-Modified" content="0">
@@ -31,6 +31,11 @@
     <script src="https://player.vimeo.com/api/player.js"></script>
     
     <app-root></app-root>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+<script>
+   AOS.init();
+</script>
 </body>
 
 </html>
